--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     </licenses>
 
     <properties>
-        <revision>1.4.2</revision>
+        <revision>1.4.2.tinypace</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netty.version>4.1.44.Final</netty.version>
         <lombok.version>1.18.28</lombok.version>
@@ -60,7 +60,7 @@
         <maven.compiler.plugin>3.6.1</maven.compiler.plugin>
         <maven.source.plugin>2.2.1</maven.source.plugin>
         <maven.javadoc.plugin>2.9.1</maven.javadoc.plugin>
-        <protoc.jar.maven.plugin>3.11.4</protoc.jar.maven.plugin>
+        <protoc.jar.maven.plugin>3.6.0</protoc.jar.maven.plugin>
         <jdk.version>1.8</jdk.version>
     </properties>
 
@@ -299,7 +299,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-pool2</artifactId>
-                <version>2.4.2</version>
+                <version>2.11.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
@@ -368,11 +368,6 @@
                 <version>2.23.4</version>
                 <scope>test</scope>
             </dependency>
-	    <dependency>
-                <groupId>com.github.os72</groupId>
-                <artifactId>protoc-jar-maven-plugin</artifactId>
-                <version>3.11.4</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -382,4 +377,28 @@
             <artifactId>brpc-java</artifactId>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Releases</name>
+            <url>https://nexus.tinypace.com/repository/maven-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>user-snapshots</id>
+            <url>https://nexus.tinypace.com/repository/maven-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+            <id>releases</id>
+            <name>maven-releases</name>
+            <url>https://nexus.tinypace.com/repository/maven-public</url>
+        </repository>
+    </repositories>
 </project>
